fix dates not being aligned to top

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -784,6 +784,7 @@ ol.hide-bullets {
   time {
     width: 4em;
     display: inline-block;
+    vertical-align: top;
   }
 
   a {
